feat: modify naming, added business logic for return error message if no rental under the given user id